# moviesyms

./: .gitignore  README.md  pyproject.toml
moviesyms/: LetterboxdDiary.py  cli.py  main.py
tests/: test_moviesyms.py
tests/data/: cast.csv  collections.csv  crew.csv  details.csv  diary.csv  diary_empty.csv  genres.csv  mapping.csv  production_companies.csv  production_countries.csv  spoken_languages.csv
