[tool.poetry]
name = "moviesyms"
version = "0.1.0"
description = ""
authors = ["schuenemann"]

[tool.poetry.dependencies]
python = "^3.10"
pathlib = "^1.0.1"
pandas = "^1.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
moviesyms = "moviesyms.cli:main"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
